New - Ajout d'une vérification de notation en doublon sur un produit

--- a/Sheaft.Localization/Resources/MessageResources.resx
+++ b/Sheaft.Localization/Resources/MessageResources.resx
@@ -669,4 +669,7 @@
   <data name="Error" xml:space="preserve">
     <value>Une erreur générique a été générée</value>
   </data>
+  <data name="Product_CannotRate_AlreadyRated" xml:space="preserve">
+    <value>Vous avez déjà noté ce produit</value>
+  </data>
 </root>
