--- a/Sheaft.Localization/Resources/MessageResources.resx
+++ b/Sheaft.Localization/Resources/MessageResources.resx
@@ -933,4 +933,10 @@
   <data name="Unauthenticated" xml:space="preserve">
     <value>Vous devez être connecté pour accéder à cette ressource</value>
   </data>
+  <data name="Catalogs" xml:space="preserve">
+    <value>Catalogue</value>
+  </data>
+  <data name="Catalogs_CannotRemove_Consumers" xml:space="preserve">
+    <value>Impossible de supprimer un catalogue consommateur, vous pouvez néanmoins le désactiver.</value>
+  </data>
 </root>
